--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
 }
 
-html,body {
+html,
+body {
     width: 100%;
     min-width: 100%;
     height: 100%;
@@ -21,6 +22,10 @@ html,body {
 a {
     text-decoration: none;
     color: white;
+}
+
+textarea {
+    resize: none;
 }
 
 .wrapper {
@@ -48,25 +53,31 @@ a {
     margin-top: 1.5%;
     padding: 1%;
 }
+
 .postTitle {
-    font-size:x-large;
+    font-size: x-large;
 }
+
 .postUser {
     font-size: small;
 }
+
 .postContent {
     margin-top: 0.5%;
     margin-bottom: 1%;
 }
+
 .postDate {
     margin-bottom: 0.5%;
 }
+
 .postLink {
     background-color: rgb(132, 132, 221);
     border: 0;
-    font-size:small;
+    font-size: small;
     padding: 0.2%;
 }
+
 .postDelete {
     background-color: rgb(221, 132, 132);
     border: 0;
@@ -81,24 +92,29 @@ a {
     display: flex;
     background-color: rgb(41, 41, 41);
 }
+
 .leftSide {
     width: 50%;
     display: flex;
     margin-left: 1%;
     align-items: center;
 }
+
 .websiteIconContainer {
     width: 5%;
     height: 100%;
     margin-right: 1.5%;
 }
+
 .websiteIcon {
     width: 100%;
     height: 100%;
 }
+
 .websiteTitle {
     margin-right: 5%;
 }
+
 .createPostButton {
     background-color: rgb(115, 115, 194);
     padding-left: 0.5%;
@@ -106,6 +122,7 @@ a {
     padding-top: 0.2%;
     padding-bottom: 0.2%;
 }
+
 .rightSide {
     width: 50%;
     display: flex;
@@ -113,23 +130,27 @@ a {
     justify-content: end;
     margin-right: 2.5%;
 }
+
 .loginButton {
     background-color: rgb(132, 132, 221);
-        padding-left: 0.5%;
+    padding-left: 0.5%;
     padding-right: 0.5%;
     padding-top: 0.2%;
     padding-bottom: 0.2%;
 }
+
 .writeForm {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .formContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .postNameInput {
     width: 100%;
     margin-bottom: 1%;
@@ -137,6 +158,7 @@ a {
     color: white;
     border: 0;
 }
+
 .postContentInput {
     width: 100%;
     margin-bottom: 1%;
@@ -145,6 +167,7 @@ a {
     border: 0;
     resize: none;
 }
+
 .postButton {
     width: 100%;
     cursor: pointer;
@@ -152,28 +175,34 @@ a {
     border: 0;
     color: white;
 }
+
 .pageContainer {
     width: 100%;
-    height: 100%;
+    max-width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
 }
+
 .pageTitle {
     width: 80%;
     text-align: left;
     font-size: 250%;
     margin-top: 1.5%;
 }
+
 .pageAuthor {
     width: 80%;
     text-align: left;
     margin-bottom: 2.5%;
 }
+
 .pageContent {
     width: 80%;
-    height: 100%;
+    max-width: 80%;
+    word-wrap: break-word;
 }
+
 .backBtn {
     background-color: rgb(115, 115, 194);
     padding-left: 0.5%;
@@ -193,12 +222,14 @@ a {
     align-items: center;
     flex-direction: column;
 }
+
 .loginForm {
     width: 20%;
     display: flex;
     align-items: center;
     flex-direction: column;
 }
+
 .loginInput {
     width: 100%;
     margin-bottom: 2.5%;
@@ -206,17 +237,55 @@ a {
     background-color: rgb(41, 41, 41);
     color: white;
 }
+
 .loginBtn {
     width: 80%;
-        background-color: rgb(115, 115, 194);
+    background-color: rgb(115, 115, 194);
     padding-left: 0.5%;
     padding-right: 0.5%;
     padding-top: 0.2%;
     padding-bottom: 0.2%;
-        cursor: pointer;
+    cursor: pointer;
     border: 0;
     color: white;
 }
+
 .accountName:hover {
     text-decoration: line-through;
+}
+
+.commentsContainer {
+    margin-left: 10%;
+    margin-top: 5%;
+}
+
+.commentform {
+    display: flex;
+    margin-bottom: 2%;
+}
+
+.commentinput {
+    border: 0;
+    background-color: rgb(41, 41, 41);
+    color: white;
+    text-align: center;
+}
+
+.commentsubmit {
+    background-color: rgb(115, 115, 194);
+    cursor: pointer;
+    border: 0;
+    color: white;
+}
+
+.commentContainer {
+    margin-bottom: 1%;
+}
+
+.commentuser {
+    font-size: 80%;
+}
+
+.commentcontent {
+    margin-top: 0.3%;
 }
